trunk/Archive2/ba/636978d76cf155/output
main.cpp:72:74: error: no type named 'dummy' in 'std::tuple<Vector<int>, Vector<short>, Vector<char> >'
        typename ContainerTemplate<Temp1<Vector>, int, short, char>::container::dummy;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
main.cpp:74:77: error: no type named 'dummy' in 'std::tuple<Map<int, int>, Map<short, short> >'
        typename ContainerTemplate<Temp2<Map>, int, int, short, short>::container::dummy;
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
2 errors generated.
